--- a/Sales_Predictions.ipynb
+++ b/Sales_Predictions.ipynb
@@ -2240,11 +2240,11 @@
         "X_train['Item_Fat_Content'].value_counts()"
       ],
       "metadata": {
-        "id": "WXz1Yf29qgJT",
-        "outputId": "9b98b968-0c8f-460d-adbc-bc92cbb99cf5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WXz1Yf29qgJT",
+        "outputId": "9b98b968-0c8f-460d-adbc-bc92cbb99cf5"
       },
       "execution_count": 34,
       "outputs": [
@@ -2272,11 +2272,11 @@
         "X_test['Item_Fat_Content'].value_counts()"
       ],
       "metadata": {
-        "id": "ehHmaDK5veI5",
-        "outputId": "cf178ade-94ec-4742-e375-a3d91095cb87",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ehHmaDK5veI5",
+        "outputId": "cf178ade-94ec-4742-e375-a3d91095cb87"
       },
       "execution_count": 35,
       "outputs": [
@@ -2300,21 +2300,21 @@
     {
       "cell_type": "code",
       "source": [
-        "#defining a dictionary to replace\n",
+        "#defining a dictionary training variable to replace\n",
         "item_fat_content_train = {'LF': 'Low Fat', 'reg': 'Regular', 'low fat': 'Low Fat'}\n",
         "\n",
-        "#applying the dictionary to the column in the train set\n",
+        "#applying the dictionary to the column in the train data\n",
         "X_train['Item_Fat_Content'] = X_train['Item_Fat_Content'].replace(item_fat_content_train)\n",
         "\n",
         "#viewing the train dataframe using value_counts to make sure it worked\n",
         "X_train['Item_Fat_Content'].value_counts()"
       ],
       "metadata": {
-        "id": "dmMJyFh8vw-q",
-        "outputId": "6a05f9f1-ac3c-4817-95b3-809f9a20e028",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dmMJyFh8vw-q",
+        "outputId": "6a05f9f1-ac3c-4817-95b3-809f9a20e028"
       },
       "execution_count": 36,
       "outputs": [
@@ -2336,21 +2336,21 @@
       "cell_type": "code",
       "source": [
         "#treating test data the same way as the train data above\n",
-        "# defining a new dictionary to replace\n",
+        "#defining a new dictionary testing variable to replace\n",
         "item_fat_content_test = {'LF': 'Low Fat', 'reg': 'Regular', 'low fat': 'Low Fat'}\n",
         "\n",
-        "#applying the dictionary to the column in the train set\n",
+        "#applying the dictionary to the column in the test data\n",
         "X_test['Item_Fat_Content'] = X_test['Item_Fat_Content'].replace(item_fat_content_test)\n",
         "\n",
         "#viewing the test dataframe using value_counts to make sure it worked\n",
         "X_test['Item_Fat_Content'].value_counts()"
       ],
       "metadata": {
-        "id": "lGJeISJhwdjH",
-        "outputId": "72ba2dc9-2718-49fc-fdb3-e8e32c7ccc49",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lGJeISJhwdjH",
+        "outputId": "72ba2dc9-2718-49fc-fdb3-e8e32c7ccc49"
       },
       "execution_count": 37,
       "outputs": [
