--- a/Sales_Predictions.ipynb
+++ b/Sales_Predictions.ipynb
@@ -2268,7 +2268,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#need to fix the test Item_Fat_Content as well for this nominal feature to our allow column transformer and pipeline to run smoothly\n",
+        "#need to fix the test Item_Fat_Content as well for this nominal feature to allow column transformer and pipeline to run correctly\n",
         "X_test['Item_Fat_Content'].value_counts()"
       ],
       "metadata": {
