--- a/Sales_Predictions.ipynb
+++ b/Sales_Predictions.ipynb
@@ -307,12 +307,12 @@
         "  rmse = np.sqrt(mse)\n",
         "  r2 = r2_score(y_true, y_pred)\n",
         "\n",
-        "  print(f'scores: \\nRMSE: {rmse:,.2f} \\nR2: {r2:.2f}')"
+        "  print(f'scores:\\nRMSE: {rmse:,.2f} \\nR2: {r2:.2f}')"
       ],
       "metadata": {
         "id": "fZ9jgoG4all2"
       },
-      "execution_count": 60,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -2591,6 +2591,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Linear Regression Model"
+      ],
+      "metadata": {
+        "id": "PKI5gfvldDK4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#instantiating the model\n",
@@ -2621,11 +2630,11 @@
         "print(f'the models average error on the testing set is {test_error}')"
       ],
       "metadata": {
-        "id": "N1gCC754aHte",
-        "outputId": "495fffbe-998d-4d16-f903-3f277d025910",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "N1gCC754aHte",
+        "outputId": "495fffbe-998d-4d16-f903-3f277d025910"
       },
       "execution_count": 56,
       "outputs": [
@@ -2649,25 +2658,27 @@
         "evaluate_regression(y_test, lin_reg_pipe.predict(X_test))"
       ],
       "metadata": {
-        "id": "uAu0AOK_a35w",
-        "outputId": "16ed6b31-392b-44bb-a303-45089a11b298",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uAu0AOK_a35w",
+        "outputId": "ec0ac8f6-cd42-478a-c0b0-40403334297f"
       },
-      "execution_count": 61,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Linear Regression Train Evaluation\n",
-            "scores: \n",
+            "scores:\n",
+            "MSE: 1,298,027.75 \n",
             "RMSE: 1,139.31 \n",
             "R2: 0.56\n",
             "\n",
             "Linear Regression Test Evaluation\n",
-            "scores: \n",
+            "scores:\n",
+            "MSE: 1,195,845.78 \n",
             "RMSE: 1,093.55 \n",
             "R2: 0.57\n"
           ]
@@ -2677,22 +2688,131 @@
     {
       "cell_type": "markdown",
       "source": [
-        ">Linear Regression Model displays both high bias and variance"
+        ">Linear Regression Model displays both high bias and variance. "
       ],
       "metadata": {
         "id": "S2b2-M4NcF4o"
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "#Decision Tree Model"
       ],
       "metadata": {
-        "id": "xIuq-nMoblhk"
+        "id": "BEabkIIVc7WY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#instantiating a decision tree model\n",
+        "dec_tree = DecisionTreeRegressor(max_depth=1)\n",
+        "\n",
+        "#putting the model in a pipeline with the predefined preprocessor\n",
+        "dec_tree_pipe = make_pipeline(preprocessor, dec_tree)\n",
+        "\n",
+        "#fitting the model on the training data\n",
+        "dec_tree_pipe.fit(X_train, y_train)\n",
+        "\n",
+        "#evaluating the model on both the training and the testing data.\n",
+        "print('Training')\n",
+        "evaluate_regression(y_train, dec_tree_pipe.predict(X_train))\n",
+        "print('\\nTesting')\n",
+        "evaluate_regression(y_test, dec_tree_pipe.predict(X_test))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xIuq-nMoblhk",
+        "outputId": "a2ed6ed0-641a-4d24-b8a6-1c803a796d1a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Training\n",
+            "scores:\n",
+            "MSE: 2,255,705.55 \n",
+            "RMSE: 1,501.90 \n",
+            "R2: 0.24\n",
+            "\n",
+            "Testing\n",
+            "scores:\n",
+            "MSE: 2,125,288.24 \n",
+            "RMSE: 1,457.84 \n",
+            "R2: 0.23\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Coefficient Determination (R2) Comparative Analysis\n"
+      ],
+      "metadata": {
+        "id": "ta3L676KfE1H"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Comparing coefficient of determination from Linear Regression to Decision Tree: The R^2 value's output in the Linear Regression Model displays a better result. The higher and closer our R^2 score, the better the fit is to our data. The Linear Regression Model can account for about 57% of the variation in y_test using the features in X_test. On the other hand, R^2 from the Decision Tree Model can only account for about 23%. The benefit to this approach is that is shows a consistent scale for all datasets. "
+      ],
+      "metadata": {
+        "id": "mRctwJBdfHoW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">Verdict: Suggest using following Linear Regression Model and its R^2 regression metric to drive a better prediction of our Outlet Sales. "
+      ],
+      "metadata": {
+        "id": "qjhFnttjgzeX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Root Mean Squared Error (MSE) Comparative Analysis"
+      ],
+      "metadata": {
+        "id": "eIh0wb4xhFBv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A lower RMSE is better. RMSE punishes large errors (like MSE), and when looking at this metric we can see that the RMSE is significantly better in the Linear Regression Model vs. the Decision Tree Model."
+      ],
+      "metadata": {
+        "id": "eEYyCTtchIfZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">Verdict: Using the Linear Regression Model and its RMSE regression metric will help drive a better prediction for our Outlet Sales. "
+      ],
+      "metadata": {
+        "id": "x5mWV8HtiXjf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Overall Recommendations\n",
+        "\n",
+        "I would recommend deploying and refining the Linear Regression Model to drive to a better sales prediction. The main reason is the regression metrics are in favor of the Linear Regression Model. This shows that the Linear Regression Model is handling the errors far better than the Decision Tree Model. Even though it still is displaying a high bias and variance, the Linear Regression Model will outperform the Decision Tree Model."
+      ],
+      "metadata": {
+        "id": "kWmi2RdVi-X5"
+      }
     }
   ]
 }
