--- a/Sales_Predictions.ipynb
+++ b/Sales_Predictions.ipynb
@@ -2761,7 +2761,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Comparing coefficient of determination from Linear Regression to Decision Tree: The R^2 value's output in the Linear Regression Model displays a better result. The higher and closer our R^2 score, the better the fit is to our data. The Linear Regression Model can account for about 57% of the variation in y_test using the features in X_test. On the other hand, R^2 from the Decision Tree Model can only account for about 23%. The benefit to this approach is that is shows a consistent scale for all datasets. "
+        "Comparing coefficient of determination from Linear Regression to Decision Tree: The R^2 value's output in the Linear Regression Model displays a better result. The higher and closer our R^2 score is to 1, the better the fit is to our data. The Linear Regression Model can account for about 57% of the variation in y_test using the features in X_test. On the other hand, R^2 from the Decision Tree Model can only account for about 23%. The benefit to this approach is that is shows a consistent scale for all datasets. "
       ],
       "metadata": {
         "id": "mRctwJBdfHoW"
