--- a/Sales_Predictions.ipynb
+++ b/Sales_Predictions.ipynb
@@ -2593,7 +2593,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Linear Regression Model"
+        "#Linear Regression Model"
       ],
       "metadata": {
         "id": "PKI5gfvldDK4"
